--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@supabase/supabase-js": "^2.39.7",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "express": "^5.1.0",
     "node-cron": "^4.2.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.23.0"
