--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "adm-zip": "^0.5.16",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "moment-timezone": "^0.6.0",
     "node-cron": "^4.2.1",
     "qrcode-terminal": "^0.12.0",
+    "unzipper": "^0.12.3",
     "whatsapp-web.js": "^1.23.0"
   }
 }
