--- a/package.json
+++ b/package.json
@@ -8,16 +8,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
-    "adm-zip": "^0.5.16",
     "axios": "^1.11.0",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
-    "moment-timezone": "^0.6.0",
-    "node-cron": "^4.2.1",
-    "qrcode": "^1.5.4",
-    "qrcode-terminal": "^0.12.0",
-    "unzipper": "^0.12.3",
-    "uuid": "^11.1.0",
-    "whatsapp-web.js": "^1.31.0"
+    "node-cron": "^4.2.1"
   }
 }
